feat: create UserInMemoryRepository

--- a/repository/Cargo.toml
+++ b/repository/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 async-trait = { workspace = true }
 domain = { workspace = true }
 thiserror = { workspace = true }
+tokio = { workspace = true }
