--- a/services/Cargo.toml
+++ b/services/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2024"
 
 [dependencies]
 async-trait = { workspace = true }
+domain = { workspace = true }
+dtos = { workspace = true }
+repository = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
