feat: create Structs App, AppBuilder, ConfigApp, ServerConfig, SurrealDbConfig, read with Figment(Env or Json file), move code init server for method run in App

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2024"
 [dependencies]
 actix-web = { workspace = true }
 domain = { workspace = true }
+dotenv = "0.15.0"
 dtos = { workspace = true }
+figment = { version = "0.10.19", features = ["env", "json"] }
 repository = { workspace = true }
+serde = { workspace = true }
 services = { workspace = true }
