feat: create UserSurrealDbRepository and implements methods

--- a/repository/Cargo.toml
+++ b/repository/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2024"
 
 [dependencies]
 async-trait = { workspace = true }
+chrono = { workspace = true }
 domain = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+surrealdb = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
