--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ repository = { path = "./repository" }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 services = { path = "./services" }
+surrealdb = "2.4.1"
 thiserror = "2.0.17"
 tokio = { version = "1.49.0", features = ["full"] }
 uuid = { version = "1.19.0", features = ["serde", "v4"] }
