feat: create route for files and create scoope for api routes

--- a/.env-example
+++ b/.env-example
@@ -2,6 +2,8 @@ REMIND_SERVER__ADDR=
 REMIND_SERVER__HOSTNAME=
 REMIND_SERVER__WORKERS=
 REMIND_SERVER__KEEP_ALIVE_SECS=
+REMIND_SERVER__STORAGE_DIR=
+
 
 
 REMIND_SURREAL_DB__URL=
