--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-files = "0.6.9"
 actix-web = { workspace = true }
 domain = { workspace = true }
 dotenv = "0.15.0"
