--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2024"
 [dependencies]
 actix-files = "0.6.9"
 actix-web = { workspace = true }
+chrono = { workspace = true }
 domain = { workspace = true }
 dotenv = "0.15.0"
 dtos = { workspace = true }
 figment = { version = "0.10.19", features = ["env", "json"] }
 repository = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 services = { workspace = true }
 surrealdb = { workspace = true }
 surrealdb-migrations = "2.4.0"
