--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,6 +11,7 @@ domain = { workspace = true }
 dotenv = "0.15.0"
 dtos = { workspace = true }
 figment = { version = "0.10.19", features = ["env", "json"] }
+http = { path = "../http/", features = ["actix-web"] }
 repository = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
