feat/refactor: defined trait Service for type Args for arguments run methods and hash password user for register

--- a/.env-example
+++ b/.env-example
@@ -5,7 +5,7 @@ REMIND_SERVER__WORKERS=
 REMIND_SERVER__KEEP_ALIVE_SECS=
 REMIND_SERVER__STORAGE_DIR=
 
-
+REMIND_SECURITY__KEY=
 
 REMIND_SURREAL_DB__URL=
 REMIND_SURREAL_DB__USERNAME=
