--- a/services/Cargo.toml
+++ b/services/Cargo.toml
@@ -8,6 +8,7 @@ async-trait = { workspace = true }
 domain = { workspace = true }
 dtos = { workspace = true }
 repository = { workspace = true }
+security = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
