--- a/.env-example
+++ b/.env-example
@@ -5,7 +5,8 @@ REMIND_SERVER__WORKERS=
 REMIND_SERVER__KEEP_ALIVE_SECS=
 REMIND_SERVER__STORAGE_DIR=
 
-REMIND_SECURITY__KEY=
+REMIND_SECURITY__USERS_KEY=
+REMIND_SECURITY__RESET_KEY=
 
 REMIND_SURREAL_DB__URL=
 REMIND_SURREAL_DB__USERNAME=
