feat: creat config for email sender

--- a/.env-example
+++ b/.env-example
@@ -8,6 +8,13 @@ REMIND_SERVER__STORAGE_DIR=
 REMIND_SECURITY__USERS_KEY=
 REMIND_SECURITY__RESET_KEY=
 
+REMIND_EMAIL__SMTP=
+REMIND_EMAIL__FROM_NAME=
+REMIND_EMAIL__FROM_EMAIL=
+REMIND_EMAIL__USERNAME=
+REMIND_EMAIL__PASSWORD=
+
+
 REMIND_SURREAL_DB__URL=
 REMIND_SURREAL_DB__USERNAME=
 REMIND_SURREAL_DB__PASSWORD=
