feat: create endpoint by send email for reset password

--- a/.env-example
+++ b/.env-example
@@ -11,8 +11,7 @@ REMIND_SECURITY__RESET_KEY=
 REMIND_EMAIL__SMTP=
 REMIND_EMAIL__FROM_NAME=
 REMIND_EMAIL__FROM_EMAIL=
-REMIND_EMAIL__USERNAME=
-REMIND_EMAIL__PASSWORD=
+REMIND_EMAIL__APP_KEY=
 
 
 REMIND_SURREAL_DB__URL=
