feat: implemeted method for FileService actions, and add in services map in app state

--- a/.env-example
+++ b/.env-example
@@ -3,6 +3,7 @@ REMIND_SERVER__ADDR=
 REMIND_SERVER__HOSTNAME=
 REMIND_SERVER__WORKERS=
 REMIND_SERVER__KEEP_ALIVE_SECS=
+REMIND_SERVER__PUBLIC_DIR=
 REMIND_SERVER__STORAGE_DIR=
 
 REMIND_SECURITY__USERS_KEY=
