--- a/services/Cargo.toml
+++ b/services/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 async-trait = { workspace = true }
+aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
+aws-sdk-s3 = "1.122.0"
+aws-smithy-types = "1.4.3"
 domain = { workspace = true }
 dtos = { workspace = true }
 lettre = "0.11.19"
