refactor/feat: move config for separet libary and create config for S3StorageService

--- a/.env-example
+++ b/.env-example
@@ -7,6 +7,13 @@ REMIND_SERVER__KEEP_ALIVE_SECS=
 REMIND_LOCAL_STORAGE__PUBLIC_DIR=
 REMIND_LOCAL_STORAGE__STORAGE_DIR=
 
+REMIND_S3_STORAGE__URL=
+REMIND_S3_STORAGE__ACCESS_KEY_ID=
+REMIND_S3_STORAGE__ACCESS_KEY_SECRET=
+REMIND_S3_STORAGE__PROVIDE=
+REMIND_S3_STORAGE__REGION=
+REMIND_S3_STORAGE__TEMP_FILES_PATH=
+
 REMIND_SECURITY__USERS_KEY=
 REMIND_SECURITY__RESET_KEY=
 
@@ -14,7 +21,6 @@ REMIND_EMAIL__SMTP=
 REMIND_EMAIL__FROM_NAME=
 REMIND_EMAIL__FROM_EMAIL=
 REMIND_EMAIL__APP_KEY=
-
 
 REMIND_SURREAL_DB__URL=
 REMIND_SURREAL_DB__USERNAME=
