--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+  "config",
   "domain",
   "dtos",
   "http",
@@ -16,6 +17,7 @@ actix-web = "4.12.1"
 anyhow = "1.0.100"
 async-trait = "0.1.89"
 chrono = { version = "0.4.42", features = ["serde"] }
+config = { path = "./config" }
 domain = { path = "./domain" }
 dtos = { path = "./dtos" }
 repository = { path = "./repository" }
