--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ security = { path = "./security/" }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 services = { path = "./services" }
-surrealdb = "2.4.1"
+surrealdb = { version = "2.6", features = ["rustls"] }
 thiserror = "2.0.17"
 tokio = { version = "1.49.0", features = ["full"] }
 uuid = { version = "1.19.0", features = ["serde", "v4"] }
