--- a/repository/Cargo.toml
+++ b/repository/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 async-trait = { workspace = true }
 chrono = { workspace = true }
 domain = { workspace = true }
+rustls = { version = "0.23", features = ["ring"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 surrealdb = { workspace = true }
