--- a/dtos/Cargo.toml
+++ b/dtos/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { workspace = true }
 domain = { workspace = true }
 serde = { workspace = true }
 validator = { workspace = true }
