refactor/fix: Fix bugs in Querys for repository, add handler erros for bad_request and not_found, move migrations for folder, and add evemt for recursive delete property

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,3 +22,4 @@ serde_json = { workspace = true }
 services = { workspace = true }
 surrealdb = { workspace = true }
 surrealdb-migrations = "2.4.0"
+tokio = { workspace = true }
