--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.7.1", features = ["router"] }
+domain = { workspace = true }
 dtos = { workspace = true }
 http = { path = "../http/" }
 reqwest = { version = "0.13.2", features = ["json"] }
