--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -10,7 +10,7 @@ dioxus = { version = "0.7.1", features = ["router"] }
 domain = { workspace = true }
 dtos = { workspace = true }
 http = { path = "../http/" }
-reqwest = { version = "0.13.2", features = ["json"] }
+reqwest = { version = "0.13.2", features = ["form", "json", "multipart"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 
